--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
     background-color: #334;
     font-family: Arial, sans-serif;
+    width: 95%;
     margin: 0 auto;
     padding: 20px;
     color: #FFFFFF;
